Updates from Overleaf

--- a/novel.bib
+++ b/novel.bib
@@ -1,5 +1,5 @@
 @article{AA09,
-  author = {Akbilgic, O. and Akinci, E. D.},
+  author = {Akbilgic, O. and Akinci, E.D.},
   year = {2009},
   title = {A novel regression approach: least squares ratio},
   journal = {Communications in Statistics - Theory and Methods},
@@ -45,7 +45,7 @@
 }
 
 @article{BM12,
-  author = {Beutel, A. L. and Minner, S.},
+  author = {Beutel, A.L. and Minner, S.},
   year = {2012},
   title = {Safety stock planning under causal demand forecasting},
   journal = {International Journal of Production Economics},
@@ -64,8 +64,29 @@
   pages = {5--20}
 }
 
+@article{CS19,
+  author = {Cao, Y. and Shen, Z.-J.},
+  year = {2019},
+  title = {Quantile forecasting and data-driven inventory management under nonstationary demand},
+  journal = {Operations Research Letters},
+  volume = {47},
+  pages = {465--472},
+  abstract = {In this paper, a single-step framework for predicting quantiles of time series is presented. Subsequently, we propose that this technique can be adopted as a data-driven approach to determine stock levels in the environment of newsvendor problem and its multi-period extension. Theoretical and empirical findings suggest that our method is effective at modeling both weakly stationary and some nonstationary time series. On both simulated and real-world datasets, the proposed approach outperforms existing statistical methods and yields good newsvendor solutions.},
+}
+
+@article{Ca16,
+  author = {Carrizosa, E. and Olivares-Nadal, A.V. and Ram{\'{i}}rez-Cobo, P.},
+  year = {2016},
+  title = {Robust newsvendor problem with autoregressive demand},
+  journal = {Computers and Operations Research},
+  volume = {68},
+  pages = {123--133},
+  abstract = {This paper explores the single-item newsvendor problem under a novel setting which combines temporal dependence and tractable robust optimization. First, the demand is modeled as a time series which follows an autoregressive process AR(p), p≥1. Second, a robust approach to maximize the worst-case revenue is proposed: a robust distribution-free autoregressive method for the newsvendor problem, which copes with non-stationary time series, is formulated. A closed-form expression for the optimal solution is found for p=1; for the remaining values of p, the problem is expressed as a nonlinear convex optimization program, to be solved numerically. The optimal solution under the robust method is compared with those obtained under three versions of the classic approach, in which either the demand distribution is unknown, and autocorrelation is neglected, or it is assumed to follow an AR(p) process with normal error terms. Numerical experiments show that our proposal usually outperforms the previous benchmarks, not only with regard to robustness, but also in terms of the average revenue. Extensions to multiperiod and multiproduct models are also discussed.},
+  keywords = {Autoregressive process,Distribution-free newsboy problem,Forecasting,Minimax,Robust optimization,Uncertainty set},
+}
+
 @article{CD14,
-  author = {Chai, T. and Draxler, R. R.},
+  author = {Chai, T. and Draxler, R.R.},
   year = {2014},
   title = {{Root mean square error (RMSE) or mean absolute error (MAE)?--Arguments against avoiding RMSE in the literature}},
   journal = {Geoscientific Model Development},
@@ -76,8 +97,8 @@
 @book{Ch12,
   author = {Choi, T.-M.},
   year = {2012},
-  title = {{Handbook of Newsvendor Problems: Models, Extensions and Applications}},
-  publisher = {Springer Science \& Business Media},
+  title = {{Handbook of Newsvendor Problems}},
+  publisher = {Springer},
   address = {New York}
 }
 
@@ -108,6 +129,27 @@
   address = {Cambridge, MA}
 }
 
+@article{Guo11,  
+  author = {Guo, P.},  
+  year = {2011},  
+  title = {One-Shot Decision Theory},
+  journal = {IEEE Transactions on Systems, Man, and Cybernetics - Part A: Systems and Humans},  
+  volume = {41},  
+  number = {5},  
+  pages = {917-926},  
+  abstract = {This paper focuses on one-shot (one-time) decision problems, which concern the situations where a decision is experienced only once. Such one-shot decision problems are commonly encountered in business, economics, and social systems. The one-shot decision process comprises two steps. In the first step, a decision maker identifies which state of nature should be taken into account for each alternative among all available states of nature. These identified states of nature are called focus points. Twelve types of focus points are proposed according to a decision maker's attitudes about the possibility of a state of nature and satisfaction resulted by its occurrence. In the second step, a decision maker evaluates the alternatives based on focus points where the consequences provided by all alternatives are compared with each other to obtain the best alternative. The relationships between different focus points are analyzed. An example, which is a newsvendor problem of a new product with a short life cycle, is used to illustrate the one-shot decision. The results of analysis show that the proposed decision models can provide useful insights into understanding different behaviors of decision makers and help the decision maker in finding out the best solution according to his/her attitude about possibility and satisfaction.}, 
+}
+
+@article{GM14,
+  author = {Guo, P. and Ma, X.},
+  year = {2014},
+  title = {Newsvendor models for innovative products with one-shot decision theory},
+  journal = {European Journal of Operational Research},
+  volume = {239},
+  pages = {523--536},
+  abstract = {In this paper, newsvendor problems for innovative products are analyzed. Because the product is new, no relevant historical data is available for statistical demand analysis. Instead of using the probability distribution, the possibility distribution is utilized to characterize the uncertainty of the demand. We consider products whose life cycles are expected to be smaller than the procurement lead times. Determining optimal order quantities of such products is a typical one-shot decision problem for a retailer. Therefore, newsvendor models for innovative products are proposed based on the one-shot decision theory (OSDT). The main contributions of this research are as follows: the general solutions of active, passive, apprehensive and daring focus points and optimal alternatives are proposed and the existence theorem is established in the one-shot decision theory; a simple and effective approach for identifying the possibility distribution is developed; newsvendor models with four types of focus points are built; managerial insights into the behaviors of different types of retailers are gained by the theoretical analysis; the proposed models are scenario-based decision models which provide a fundamental alternative to analyze newsvendor problems for innovative products.},
+}
+
 @book{HW63,
   author = {Hadley, G. and Whitin, T.},
   year = {1963},
@@ -116,14 +158,28 @@
   address = {Englewood Cliffs, NJ}
 }
 
+@techreport{HN16,
+  author={Halman, N. and Nannicini, G.},
+  year={2016},
+  title={Fully polynomial-time ($\Sigma$, $\Pi$) -approximation schemes for continuous nonlinear newsvendor and continuous stochastic dynamic programs},
+}
+
 @article{HOS12,
-  author = {Halman, N. and Orlin, J. B. and Simchi-Levi, D.},
+  author = {Halman, N. and Orlin, J.B. and Simchi-Levi, D.},
   year = {2012},
   title = {Approximating the nonlinear newsvendor and single-item stochastic lot-sizing problems when data is given by an oracle},
   journal = {Operations Research},
   volume = {60},
   pages = {429--446},
   abstract = {The single-item stochastic lot-sizing problem is to find an inventory replenishment policy in the presence of discrete stochastic demands under periodic review and finite time horizon. A closely related problem is the single-period newsvendor model. It is well known that the newsvendor problem admits a closed formula for the optimal order quantity whenever the revenue and salvage values are linear increasing functions and the procurement (ordering) cost is fixed plus linear. The optimal policy for the single-item lot-sizing model is also well known under similar assumptions. In this paper we show that the classical (single-period) newsvendor model with fixed plus linear ordering cost cannot be approximated to any degree of accuracy when either the demand distribution or the cost functions are given by an oracle. We provide a fully polynomial time approximation scheme for the nonlinear single-item stochastic lot-sizing problem, when demand distribution is given by an oracle, procurement costs are provided as nondecreasing oracles, holding/backlogging/disposal costs are linear, and lead time is positive. Similar results exist for the nonlinear newsvendor problem. These approximation schemes are designed by extending the technique of K-approximation sets and functions.}
+}
+
+@techreport{HNS15,
+  author = {Harsha, P. and Natarajan, R. and Subramanian, D.},
+  year = {2015},
+  title = {A data-driven, distribution-free, multivariate approach
+  to the price-setting newsvendor problem},
+  institution = {IBM TJ Watson Research Center, Yorktown Heights, NY}
 }
 
 @article{Hi08,
@@ -145,8 +201,16 @@
   abstract = {Retailers that offer perishable items are required to make ordering decisions for hundreds of products on a daily basis. This task is non-trivial because the risk of ordering too much or too little is associated with overstocking costs and unsatisfied customers. The well-known newsvendor model captures the essence of this trade-off. Traditionally, this newsvendor problem is solved based on a demand distribution assumption. However, in reality, the true demand distribution is hardly ever known to the decision maker. Instead, large datasets are available that enable the use of empirical distributions. In this paper, we investigate how to exploit this data for making better decisions. We identify three levels on which data can generate value, and we assess their potential. To this end, we present data-driven solution methods based on Machine Learning and Quantile Regression that do not require the assumption of a specific demand distribution. We provide an empirical evaluation of these methods with point-of-sales data for a large German bakery chain. We find that Machine Learning approaches substantially outperform traditional methods if the dataset is large enough. We also find that the benefit of improved forecasting dominates other potential benefits of data-driven solution methods.},
 }
 
+@book{Hy08,
+  author = {Hyndman, R.J. and Koehler, A.B. and Ord, J.K. and Snyder, R.D},
+  year = {2008},
+  title = {{F}orecasting with {E}xponential {S}moothing},
+  address = {Berlin/Heidelberg},
+  publisher = {Springer}
+}
+
 @inbook{KC62,
-  author = {Karlin, S. and Carr, C. R.},
+  author = {Karlin, S. and Carr, C.R.},
   year = {1962},
   title = {Prices and optimal inventory policy},
   editor = {Arrow, KJ and Karlin, S and Scarf, H},
@@ -157,7 +221,7 @@
 }
 
 @article{Ka94,
-  author={Karmarkar, U. S.},
+  author={Karmarkar, U.S.},
   year={1994},
   title={A robust forecasting technique for inventory and leadtime management},
   journal={Journal of Operations Management},
@@ -192,13 +256,58 @@
   pages = {139--145}
 }
 
+@article{KHM05,
+  author = {Kocherginsky, M. and He, X. and Mu, Y.},
+  year = {2005},
+  title = {Practical confidence intervals for regression quantiles},
+  journal = {Journal of Computational and Graphical Statistics},
+  volume = {14},
+  pages = {41--55}
+}
+
+@book{Koe05,
+  author = {Koenker, R.},
+  year = {2005},
+  title = {Quantile Regression},
+  publisher={Cambridge University Press}
+}
+
+@article{RG78,
+ author = {Koenker, R. and Bassett, G.},
+ year = {1978},
+ title = {Regression quantiles},
+ journal = {Econometrica},
+ volume = {46},
+ pages = {33--50},
+ abstract = {A simple minimization problem yielding the ordinary sample quantiles in the location model is shown to generalize naturally to the linear model generating a new class of statistics we term "regression quantiles." The estimator which minimizes the sum of absolute residuals is an important special case. Some equivariance properties and the joint asymptotic distribution of regression quantiles are established. These results permit a natural generalization of the linear model of certain well-known robust estimators of location. Estimators are suggested, which have comparable efficiency to least squares for Gaussian linear models while substantially out-performing the least-squares estimator over a wide class of non-Gaussian error distributions.},
+}
+
 @article{KH01,
-  author = {Koenker, R. and Hallock, K. F.},
+  author = {Koenker, R. and Hallock, K.F.},
   year = {2001},
   title = {Quantile regression},
   journal = {{Journal of Economic Perspectives}},
   volume = {15},
   pages = {143--156}
+}
+
+@article{KM99,
+author = {Koenker, R. and Machado, J.A.F.},
+year = {1999},
+title = {Goodness of fit and related inference processes for quantile regression},
+journal = {Journal of the American Statistical Association},
+volume = {94},
+pages = {1296--1310}
+}
+
+@article{KP96,
+  author = {Koenker, R. and Park, B.J.},
+  year = {1996},
+  title = {An interior point algorithm for nonlinear quantile regression},
+  journal = {{Journal of Econometrics}},
+  volume = {71},
+  pages = {265--283},
+  abstract = {A new algorithm for computing quantile regression estimates for problems in which the response function is nonlinear in parameters is described. The nonlinear l1 estimation problem is a special (median) case. The algorithm is closely related to recent developments on interior point methods for solving linear programs. Performance of the algorithm on a variety of test problems including the censored linear quantile regression problem of Powell (1986) is reported.},
 }
 
 @article{KT96,
@@ -211,7 +320,7 @@
 }
 
 @article{KTB20,
-  author = {Kourentzes, N. and Trapero, J. R. and Barrow, D. K.},
+  author = {Kourentzes, N. and Trapero, J.R. and Barrow, D.K.},
   year = {2020},
   title = {Optimising forecasting models for inventory planning},
   journal = {International Journal of Production Economics},
@@ -220,7 +329,7 @@
 }
 
 @article{KK18,
-  author = {Kyparisis, G. J. and Koulamas, C.},
+  author = {Kyparisis, G.J. and Koulamas, C.},
   year = {2018},
   title = {The price-setting newsvendor with nonlinear salvage revenue and shortage cost},
   journal = {{Operations Research Letters}},
@@ -249,8 +358,26 @@
   abstract = {Deep learning allows computational models that are composed of multiple processing layers to learn representations of data with multiple levels of abstraction. These methods have dramatically improved the state-of-the-art in speech recognition, visual object recognition, object detection and many other domains such as drug discovery and genomics. Deep learning discovers intricate structure in large data sets by using the backpropagation algorithm to indicate how a machine should change its internal parameters that are used to compute the representation in each layer from the representation in the previous layer. Deep convolutional nets have brought about breakthroughs in processing images, video, speech and audio, whereas recurrent nets have shone light on sequential data such as text and speech.},
 }
 
+@article{LN89,
+author = {Liu, D.C and Nocedal, J.},
+year = {1989},
+title = {On the limited memory {BFGS} method for large scale optimization},
+journal = {Mathematical Programming},
+volume = {45},
+pages={503-528}
+}
+
+@article{Ma19,
+  author = {Ma, X.},
+  year = {2019},
+  title = {Pricing to the scenario: price-setting newsvendor models for innovative products},
+  journal = {Mathematics},
+  volume = {7},
+  abstract = {In this paper, we consider a manufacturer who produces and sells a kind of innovative product in the monopoly market environment. Because the life cycle of an innovative product is usually shorter than its procurement lead time, one unique demand quantity (scenario) will occur in the selling season; thus, there is only one chance for the manufacturer to determine both optimal production quantity and optimal sale price. Considering this one-time feature of such a decision problem, a price-setting newsvendor model for innovative products is proposed. Different to the existing price-setting newsvendor models, the proposed models determine the optimal production quantity and sale price based on some specific state (scenario) which is most applicable for the manufacturer. The theoretical analysis provides managerial insights into the manufacturers' behaviors in a monopoly market of an innovative product, and several phenomena in the luxury goods market are well explained.},
+}
+
 @article{Mi59,
-  author = {Mills, E. S.},
+  author = {Mills, E.S.},
   year = {1959},
   title = {Uncertainty and price theory},
   journal = {{Quarterly Journal of Economics}},
@@ -258,8 +385,17 @@
   pages = {116--130}
 }
 
+@article{MG18,
+  author = {Mohammadivojdan, R. and Geunes, J.},
+  year = {2018},
+  title = {The newsvendor problem with capacitated suppliers and quantity discounts},
+  journal = {European Journal of Operational Research},
+  volume = {271},
+  pages = {109--119},
+}
+
 @article{MS00,
-  author = {Moon, I. and Silver, E. A.},
+  author = {Moon, I. and Silver, E.A.},
   journal = {Journal of the Operational Research Society},
   title = {The multi-item newsvendor problem with a budget constraint and fixed ordering costs},
   volume = {51},
@@ -276,7 +412,7 @@
 }
 
 @article{OST20,
-  author = {Oroojlooyjadid, A. and Snyder, L. V. and Tak{\'{a}}{\v{c}}, M.},
+  author = {Oroojlooyjadid, A. and Snyder, L.V. and Tak{\'{a}}{\v{c}}, M.},
   year = {2020},
   title = {Applying deep learning to the newsvendor problem},
   journal = {IISE Transactions},
@@ -285,8 +421,18 @@
   abstract = {The newsvendor problem is one of the most basic and widely applied inventory models. If the probability distribution of the demand is known, the problem can be solved analytically. However, approximating the probability distribution is not easy and is prone to error; therefore, the resulting solution to the newsvendor problem may not be optimal. To address this issue, we propose an algorithm based on deep learning that optimizes the order quantities for all products based on features of the demand data. Our algorithm integrates the forecasting and inventory-optimization steps, rather than solving them separately, as is typically done, and does not view the optimal order quantities as the labels in the deep neural network. However, unlike most deep learning applications, our model does not know the true labels (order quantities), but rather learns them during the training. Numerical experiments on real-world data suggest that our algorithm outperforms other approaches, including data-driven and machine learning approaches, especially for demands with high volatility. Finally, in order to show how this approach can be used for other inventory optimization problems, we provide an extension for (r, Q) policies.},
 }
 
+@article{PSC15,
+  author = {Pal, B. and Sana, S.S. and Chaudhuri, K.},
+  year = {2015},
+  title = {A distribution free newsvendor problem with nonlinear holding cost},
+  journal = {International Journal of Systems Science},
+  volume = {46},
+  pages = {1269--1277},
+  abstract = {In this paper, we analyse a single-period newsvendor model to determine the optimal order quantity where the customers balking occurs. This scenario occurs when the customers are opposed to buy a product for various reasons, such as decreasing quality of product, product is not as good as fresh when it reaches under a threshold level, etc. The model is investigated by assuming that the holding cost function depends on order quantity and the inventory level at which customer balking occurs depends on holding cost. The model allows partial backlogging and permits part of the backlogged shortages to turn into lost sales. We develop the model without taking any specific distributional form of demand, only assuming the mean and the variance of the distribution of demand. Finally, we illustrate the model by numerical examples and compare our distribution-free model with the specific distributional form of demand.},
+}
+
 @article{PD99,
-  author = {Petruzzi, N. C. and Dada, M.},
+  author = {Petruzzi, N.C. and Dada, M.},
   year = {1999},
   title = {Pricing and the newsvendor problem: a review with extensions},
   journal = {Operations Research},
@@ -295,12 +441,32 @@
   abstract = {In the newsvendor problem, a decision maker facing random demand for a perishable product decides how much of it to stock for a single selling period. This simple problem with its intuitively appealing solution is a crucial building block of stochastic inventory theory, which comprises a vast literature focusing on operational efficiency. Typically in this literature, market parameters such as demand and selling price are exogenous. However, incorporating these factors into the model can provide an excellent vehicle for examining how operational problems interact with marketing issues to influence decision making at the firm level. In this paper we examine an extension of the newsvendor problem in which stocking quantity and selling price are set simultaneously. We provide a comprehensive review that synthesizes existing results for the single period problem and develop additional results to enrich the existing knowledge base. We also review and develop insight into a dynamic inventory extension of this problem, and motivate the applicability of such models.}
 }
 
+@incollection{Po90,
+  author={Porteus, E.L},
+  year={1990},
+  title={Stochastic inventory theory},
+  editor={Heyman, D.P. and Sobel, M.J.},
+  booktitle={Stochastic Models},
+  pages={605--652},
+  address={Amsterdam},
+  publisher={Elsevier}
+}
+
 @book{Po02,
-  author = {Porteus, E. L.},
+  author = {Porteus, E.L.},
   year = {2002},
-  title = {{Foundations of Stochastic Inventory Theory}},
+  title = {Foundations of Stochastic Inventory Theory},
   publisher = {Stanford Business Books},
   address = {Stanford, CA}
+}
+
+@article{Ro02,
+  author = {Rosling, K.},
+  year = {2002},
+  title = {Inventory cost rate functions with nonlinear shortage costs},
+  journal = {Operations Research},
+  volume = {50},
+  pages = {1007-1017},
 }
 
 @article{RV19,
@@ -343,8 +509,17 @@
   publisher = {Wiley}
 }
 
+@article{TCK19,
+  author = {Trapero, J. R. and Card{\'{o}}s, M. and Kourentzes, N.},
+  year = {2019},
+  title = {Empirical safety stock estimation based on kernel and {GARCH} models},
+  journal = {Omega},
+  volume = {84},
+  pages = {199--211}
+}
+
 @article{Wh54,
-  author = {Whitin, T. M.},
+  author = {Whitin, T.M.},
   year = {1954},
   title = {{E}rich {S}chneider's inventory control analysis},
   journal = {Journal of the Operations Research Society of America},
@@ -357,7 +532,7 @@
   author = {Willmott, C. J and Matsuura, K.},
   year = {2005},
   title = {Advantages of the mean absolute error (MAE) over the root mean square error (RMSE) in assessing average model performance},
-  journal = {Climate research},
+  journal = {Climate Research},
   volume = {30},
   pages = {79--82}
 }
@@ -376,200 +551,7 @@
 @book{Zi00,
   author = {Zipkin, P. H.},
   year = {2000},
-  title = {{Foundations of Inventory Management}},
+  title = {Foundations of Inventory Management},
   publisher = {McGraw-Hill},
   address = {New York}
-}
-
-@article{Ca16,
-  author = {Carrizosa, E. and Olivares-Nadal, A. V. and Ram{\'{i}}rez-Cobo, P.},
-  year = {2016},
-  title = {Robust newsvendor problem with autoregressive demand},
-  journal = {Computers and Operations Research},
-  volume = {68},
-  pages = {123--133},
-  abstract = {This paper explores the single-item newsvendor problem under a novel setting which combines temporal dependence and tractable robust optimization. First, the demand is modeled as a time series which follows an autoregressive process AR(p), p≥1. Second, a robust approach to maximize the worst-case revenue is proposed: a robust distribution-free autoregressive method for the newsvendor problem, which copes with non-stationary time series, is formulated. A closed-form expression for the optimal solution is found for p=1; for the remaining values of p, the problem is expressed as a nonlinear convex optimization program, to be solved numerically. The optimal solution under the robust method is compared with those obtained under three versions of the classic approach, in which either the demand distribution is unknown, and autocorrelation is neglected, or it is assumed to follow an AR(p) process with normal error terms. Numerical experiments show that our proposal usually outperforms the previous benchmarks, not only with regard to robustness, but also in terms of the average revenue. Extensions to multiperiod and multiproduct models are also discussed.},
-  keywords = {Autoregressive process,Distribution-free newsboy problem,Forecasting,Minimax,Robust optimization,Uncertainty set},
-}
-
-@article{KP96,
-  author = {Koenker, R. and Park, B. J.},
-  year = {1996},
-  title = {An interior point algorithm for nonlinear quantile regression},
-  journal = {{Journal of Econometrics}},
-  volume = {71},
-  pages = {265--283},
-  abstract = {A new algorithm for computing quantile regression estimates for problems in which the response function is nonlinear in parameters is described. The nonlinear l1 estimation problem is a special (median) case. The algorithm is closely related to recent developments on interior point methods for solving linear programs. Performance of the algorithm on a variety of test problems including the censored linear quantile regression problem of Powell (1986) is reported.},
-}
-
-@article{PSC15,
-  author = {Pal, B. and Sana, S. S. and Chaudhuri, K.},
-  year = {2015},
-  title = {A distribution free newsvendor problem with nonlinear holding cost},
-  journal = {International Journal of Systems Science},
-  volume = {46},
-  pages = {1269--1277},
-  abstract = {In this paper, we analyse a single-period newsvendor model to determine the optimal order quantity where the customers balking occurs. This scenario occurs when the customers are opposed to buy a product for various reasons, such as decreasing quality of product, product is not as good as fresh when it reaches under a threshold level, etc. The model is investigated by assuming that the holding cost function depends on order quantity and the inventory level at which customer balking occurs depends on holding cost. The model allows partial backlogging and permits part of the backlogged shortages to turn into lost sales. We develop the model without taking any specific distributional form of demand, only assuming the mean and the variance of the distribution of demand. Finally, we illustrate the model by numerical examples and compare our distribution-free model with the specific distributional form of demand.},
-}
-
-@article{TCK19,
-  author = {Trapero, J. R. and Card{\'{o}}s, M. and Kourentzes, N.},
-  year = {2019},
-  title = {Empirical safety stock estimation based on kernel and {GARCH} models},
-  journal = {Omega},
-  volume = {84},
-  pages = {199--211}
-}
-
-@article{RK02,
-  author = {Rosling, Kaj},
-  year = {2002},
-  month = {12},
-  pages = {1007-1017},
-  title = {Inventory Cost Rate Functions with Nonlinear Shortage Costs},
-  volume = {50},
-  journal = {Operations Research},
-}
-
-@article{MG18,
-  author = {Mohammadivojdan, Roshanak and Geunes, Joseph},
-  year = {2018},
-  title = {The newsvendor problem with capacitated suppliers and quantity discounts},
-  journal = {European Journal of Operational Research},
-  volume = {271},
-  pages = {109--119},
-}
-
-@article{CS19,
-  author = {Cao, Ying and Shen, Zuo-Jun Max},
-  year = {2019},
-  title = {Quantile forecasting and data-driven inventory management under nonstationary demand},
-  journal = {Operations Research Letters},
-  volume = {47},
-  pages = {465--472},
-  abstract = {In this paper, a single-step framework for predicting quantiles of time series is presented. Subsequently, we propose that this technique can be adopted as a data-driven approach to determine stock levels in the environment of newsvendor problem and its multi-period extension. Theoretical and empirical findings suggest that our method is effective at modeling both weakly stationary and some nonstationary time series. On both simulated and real-world datasets, the proposed approach outperforms existing statistical methods and yields good newsvendor solutions.},
-}
-
-@article{HNS15,
-  author = {Harsha, Pavithra and Natarajan, Ramesh and Subramanian, Dharmashankar},
-  year = {2015},
-  title = {A data-driven, 
-  distribution-free, multivariate approach to the price-setting newsvendor problem},
-  publisher = {Working paper, IBM TJ Watson Research Center, Yorktown Heights, NY}
-}
-
-@ARTICLE{Guo11,  
-  author = {P. {Guo}},  
-  year = {2011},  
-  title = {One-Shot Decision Theory},
-  journal = {IEEE Transactions on Systems, Man, and Cybernetics - Part A: Systems and Humans},  
-  volume = {41},  
-  number = {5},  
-  pages = {917-926},  
-  abstract = {This paper focuses on one-shot (one-time) decision problems, which concern the situations where a decision is experienced only once. Such one-shot decision problems are commonly encountered in business, economics, and social systems. The one-shot decision process comprises two steps. In the first step, a decision maker identifies which state of nature should be taken into account for each alternative among all available states of nature. These identified states of nature are called focus points. Twelve types of focus points are proposed according to a decision maker's attitudes about the possibility of a state of nature and satisfaction resulted by its occurrence. In the second step, a decision maker evaluates the alternatives based on focus points where the consequences provided by all alternatives are compared with each other to obtain the best alternative. The relationships between different focus points are analyzed. An example, which is a newsvendor problem of a new product with a short life cycle, is used to illustrate the one-shot decision. The results of analysis show that the proposed decision models can provide useful insights into understanding different behaviors of decision makers and help the decision maker in finding out the best solution according to his/her attitude about possibility and satisfaction.}, 
-}
-
-@article{GM14,
-  author = {Guo, Peijun and Ma, Xiuyan},
-  year = {2014},
-  title = {{Newsvendor models for innovative products with one-shot decision theory}},
-  journal = {European Journal of Operational Research},
-  number = {2},
-  pages = {523--536},
-  volume = {239},
-  abstract = {In this paper, newsvendor problems for innovative products are analyzed. Because the product is new, no relevant historical data is available for statistical demand analysis. Instead of using the probability distribution, the possibility distribution is utilized to characterize the uncertainty of the demand. We consider products whose life cycles are expected to be smaller than the procurement lead times. Determining optimal order quantities of such products is a typical one-shot decision problem for a retailer. Therefore, newsvendor models for innovative products are proposed based on the one-shot decision theory (OSDT). The main contributions of this research are as follows: the general solutions of active, passive, apprehensive and daring focus points and optimal alternatives are proposed and the existence theorem is established in the one-shot decision theory; a simple and effective approach for identifying the possibility distribution is developed; newsvendor models with four types of focus points are built; managerial insights into the behaviors of different types of retailers are gained by the theoretical analysis; the proposed models are scenario-based decision models which provide a fundamental alternative to analyze newsvendor problems for innovative products.},
-}
-
-@article{Ma19,
-  author = {Ma, Xiuyan},
-  year = {2019},
-  title = {{Pricing to the scenario: Price-setting newsvendor models for innovative products}},
-  journal = {Mathematics},
-  number = {9},
-  volume = {7},
-  abstract = {In this paper, we consider a manufacturer who produces and sells a kind of innovative product in the monopoly market environment. Because the life cycle of an innovative product is usually shorter than its procurement lead time, one unique demand quantity (scenario) will occur in the selling season; thus, there is only one chance for the manufacturer to determine both optimal production quantity and optimal sale price. Considering this one-time feature of such a decision problem, a price-setting newsvendor model for innovative products is proposed. Different to the existing price-setting newsvendor models, the proposed models determine the optimal production quantity and sale price based on some specific state (scenario) which is most applicable for the manufacturer. The theoretical analysis provides managerial insights into the manufacturers' behaviors in a monopoly market of an innovative product, and several phenomena in the luxury goods market are well explained.},
-}
-
-@article{RG78,
- author = {Roger Koenker and Gilbert Bassett},
- year = {1978},
- title = {Regression Quantiles},
- journal = {Econometrica},
- number = {1},
- pages = {33--50},
- publisher = {[Wiley, Econometric Society]},
- volume = {46},
- abstract = {A simple minimization problem yielding the ordinary sample quantiles in the location model is shown to generalize naturally to the linear model generating a new class of statistics we term "regression quantiles." The estimator which minimizes the sum of absolute residuals is an important special case. Some equivariance properties and the joint asymptotic distribution of regression quantiles are established. These results permit a natural generalization of the linear model of certain well-known robust estimators of location. Estimators are suggested, which have comparable efficiency to least squares for Gaussian linear models while substantially out-performing the least-squares estimator over a wide class of non-Gaussian error distributions.},
-}
-
-@book{HKO08,
-  author = {Hyndman, Rob J and Koehler, Anne B and Ord, J Keith and Snyder, Ralph D},
-  year = {2008},
-  title = {{Forecasting with Exponential Smoothing}},
-  publisher = {Springer Berlin Heidelberg},
-}
-
-@article{HN16,
-  author={Halman, Nir and Nannicini, Giacomo},
-  year={2016},
-  title={Fully polynomial-time ($\Sigma$, $\Pi$) -approximation schemes for continuous nonlinear newsvendor and continuous stochastic dynamic programs},
-}
-
-@article{KHM05,
-  author = {Kocherginsky, Masha and He, Xuming and Mu, Yunming},
-  title = {{Practical Confidence Intervals for Regression Quantiles}},
-  volume = {14},
-  year = {2005},
-  journal = {Journal of Computational and Graphical Statistics},
-  number = {1},
-  pages = {41--55},
-  publisher = {Taylor {\&} Francis},
-}
-
-@book{Koe05,
-  author = {Koenker, Roger},
-  booktitle = {Quantile Regression},
-  doi = {10.1017/CBO9780511754098},
-  isbn = {9780511754098},
-  title = {{Quantile regression}},
-  year = {2005}
-}
-
-@article{KM99,
-author = {Koenker, Roger and Machado, Jos{\'{e}} A F},
-title = {{Goodness of Fit and Related Inference Processes for Quantile Regression}},
-journal = {Journal of the American Statistical Association},
-number = {448},
-pages = {1296--1310},
-publisher = {Taylor {\&} Francis},
-volume = {94},
-year = {1999}
-}
-
-@article{LN89,
-author = {Liu, Dong C and Nocedal, Jorge},
-title = {{On the limited memory BFGS method for large scale optimization}},
-doi = {10.1007/BF01589116},
-issn = {1436-4646},
-journal = {Mathematical Programming},
-url = {https://doi.org/10.1007/BF01589116},
-volume = {45},
-year = {1989}
-}
-
-@book{Por02,
-  title={Foundations of stochastic inventory theory},
-  author={Porteus, Evan L},
-  year={2002},
-  publisher={Stanford University Press}
-}
-
-@article{Por90,
-  title={Stochastic inventory theory},
-  author={Porteus, Evan L},
-  journal={Handbooks in operations research and management science},
-  volume={2},
-  pages={605--652},
-  year={1990},
-  publisher={Elsevier}
 }
