--- a/main_file.tex
+++ b/main_file.tex
@@ -1,25 +1,29 @@
 \documentclass{article}
-\usepackage{amsmath,amssymb}
-\usepackage[a4paper,textwidth=450pt]{geometry}
-\DeclareMathOperator{\E}{\mathbb{E}}
-\usepackage[utf8]{inputenc}
+
+\usepackage{amsmath}
+\usepackage{amssymb}
 \usepackage[english]{babel}
 \usepackage{biblatex}
-\addbibresource{novel.bib}
+\usepackage{booktabs}
+\usepackage[a4paper,textwidth=450pt]{geometry}
 \usepackage{graphicx}
 \usepackage{indentfirst}
+\usepackage[utf8]{inputenc}
+\usepackage{csquotes}
+\usepackage{multirow}
 \usepackage{physics}
 \usepackage{refcheck}
+\usepackage{subcaption}
 \usepackage{units}
 \usepackage{wrapfig}
-\usepackage{subcaption}
-\usepackage{booktabs}
-\usepackage{multirow}
-\usepackage{graphicx}
-\usepackage{csquotes}
+
+\addbibresource{novel.bib}
+
 \setkeys{Gin}{width=.6\textwidth}
 % !TeX spellcheck = en_GB
 \graphicspath{ {./images/} }
+
+\DeclareMathOperator{\E}{\mathbb{E}}
 
 \newtheorem{proposition}{Proposition}
 
@@ -102,7 +106,7 @@ $c_u/(c_o+c_u)$ as a ``target service level", since that aiming for this target 
 
 Since the introduction of NVP in the 1950s \cite{AHM51,MK51}, researchers have considered several extensions of the problem, including variants with multiple product types \cite{HW63,LL96,MS00}, quantity discounts \cite{Kh95}, different risk measures \cite{EGS95}, product substitution \cite{BAA99}, nonlinear cost functions \cite{HOS12}, non-stationary demand \cite{KWH15}, and price setting \cite{KC62,Mi59,PD99}.
 
-For the purpose of what follows, we now explain one variant, the `Nonlinear Newsvendor Problem' (NNV), in detail (see also \cite{BT06,HOS12,HN16,KC62,Kh95,KK18,Mi59,PSC15,PD99,Por02,Por90}). In the NNV, the profit function takes the form:
+For the purpose of what follows, we now explain one variant, the `Nonlinear Newsvendor Problem' (NNV), in detail (see also \cite{BT06,HOS12,HN16,KC62,Kh95,KK18,Mi59,PSC15,PD99,Po90,Po02}). In the NNV, the profit function takes the form:
 \[
     \pi(Q,y)=
     \begin{cases}
@@ -112,9 +116,9 @@ For the purpose of what follows, we now explain one variant, the `Nonlinear News
 \]
 where $V$, $P$, $C_h$ and $C_s$ are now \emph{functions} rather than constants.
 
-If $\pi(Q,y)$ has a particularly simple form (e.g., if it is piecewise-linear as in classical NVP), then it may be possible to  use calculus to express the optimal order quantity as a quantile \cite{Ch12}. In general, however, a closed-form expression as a quantile is unlikely to exist \cite{HOS12,Por02,Por02}.
+If $\pi(Q,y)$ has a particularly simple form (e.g., if it is piecewise-linear as in classical NVP), then it may be possible to  use calculus to express the optimal order quantity as a quantile \cite{Ch12}. In general, however, a closed-form expression as a quantile is unlikely to exist \cite{HOS12,Po02}.
 
-We now review one particular example of NNV, taken from \cite{KK18,PD99,RK02}, that we are going to use in our numerical experiments. The purchase cost $v$ and selling price $p$ are fixed, but $C_h$ and $C_s$ are functions. Overstock items incur a constant unit penalty $\alpha > 0$, but they can be sold in a salvage market with fixed unit sales price $\beta$, with $0<\beta<v$. The demand in the salvage market is itself a random variable, with known distribution, which we denote by $u$. That is, we have:
+We now review one particular example of NNV, taken from \cite{KK18,PD99,Ro02}, that we are going to use in our numerical experiments. The purchase cost $v$ and selling price $p$ are fixed, but $C_h$ and $C_s$ are functions. Overstock items incur a constant unit penalty $\alpha > 0$, but they can be sold in a salvage market with fixed unit sales price $\beta$, with $0<\beta<v$. The demand in the salvage market is itself a random variable, with known distribution, which we denote by $u$. That is, we have:
 \[
     C_h(Q,y) \, = \, \alpha[Q-y]^{+} - \beta \E \Big[ \min \big\{ [Q-y]^{+},u \big\} \Big].
 \]
@@ -194,7 +198,7 @@ where
 \]
 Here, $\mathbf{x}_t^{\mathsf{T}}$ is the $t$-th row of the matrix $\mathbf{X}$, and $p$ is the number of explanatory variables.
 
-After estimating the model, we can set our next order quantity to $\hat{Q}_{s+1}$. We remark that, while we focus on the linear regression model in this paper, dynamic models, such as ARIMA or ETS \cite{HKO08}, could be used instead just as efficiently.
+After estimating the model, we can set our next order quantity to $\hat{Q}_{s+1}$. We remark that, while we focus on the linear regression model in this paper, dynamic models, such as ARIMA or ETS \cite{Hy08}, could be used instead just as efficiently.
 
 It can be shown that in the case of the classical NVP, the proposed estimator has the following statistical properties:
 \begin{proposition}[Scale and shift invariance]
